--- a/pages/execution.html
+++ b/pages/execution.html
@@ -21,7 +21,8 @@
             <a class="header__modal__link" href="./dashboard.html"><img class="header__img__menu header_modal_link_container" src="../assets/analise.png" alt="" />Dashboard</a>
             <a class="header__modal__link" href="./deploy.html"><img class="header__img__menu header_modal_link_container" src="../assets/foguete.png" alt="" />Deploy</a>
             <a class="header__modal__link" href="./monitoring.html"><img class="header__img__menu header_modal_link_container" src="../assets/monitoramento.png" alt="" />Monitor</a>
-            <a class="header__modal__link" href="./execution.html"><img class="header__img__menu header_modal_link_container" src="../assets/servico.png" alt="" />Execução</a>
+            <a class="header__modal__link" href="./execution.html"><img class="header__img__menu header_modal_link_container" src="../assets/schedule.png" alt="" />Execução</a>
+            <a class="header__modal__link" href="./configuracao.html"><img class="header__img__menu header_modal_link_container" src="../assets/servico.png" alt="" />Configuração</a>
             <a class="header__modal__link" href="../index.html"><img class="header__img__menu header_modal_link_container" src="../assets/sair.png" alt="" />Sign out</a>
         </div>
     </header>
@@ -94,6 +95,7 @@
         <div class="loader"></div>
     </div>
     <script src="../scripts/session.js"></script>
+    <script src="../scripts/utils.js"></script>
     <script src="../scripts/loader.js"></script>
     <script src="../scripts/execution/execution_fetches.js"></script>
     <script src="../scripts/execution/execution_body.js"></script>
