--- a/pages/execution.html
+++ b/pages/execution.html
@@ -23,7 +23,7 @@
             <a class="header__modal__link" href="./monitoring.html"><img class="header__img__menu header_modal_link_container" src="../assets/monitoramento.png" alt="" />Monitor</a>
             <a class="header__modal__link" href="./execution.html"><img class="header__img__menu header_modal_link_container" src="../assets/schedule.png" alt="" />Execução</a>
             <a class="header__modal__link" href="./configuracao.html"><img class="header__img__menu header_modal_link_container" src="../assets/servico.png" alt="" />Configuração</a>
-            <a class="header__modal__link" href="../index.html"><img class="header__img__menu header_modal_link_container" src="../assets/sair.png" alt="" />Sign out</a>
+            <button id="button_sign__out" class="header__modal__link sign__out" value=""><img class="header__img__menu header_modal_link_container" src="../assets/sair.png" alt="" />Sign out</button>
         </div>
     </header>
     <main class="main_section">
