--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <input class="login__content__container__input" type="text" id="username" placeholder="Usuário">
                 <input class="login__content__container__input" type="password" id="password" placeholder="Senha">
-                <input class="login__content__container__input hover__button" type="submit" value="Login">
+                <input id="login-btn" class="login__content__container__input hover__button" type="submit" value="Login">
             </form>
 
         </section>
