--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -31,10 +31,30 @@
         <h1 class="header__title">
             <strong>Dashboard</strong>
         </h1>
-        <section class="execution_content">
-            <div class="dashboard-container">
-                <canvas id="barChart"></canvas>
-                <canvas id="lineChart"></canvas>
+        <section class="dashboard-container">
+            <div class="dashboard-charts">
+                <canvas id="chart1"></canvas>
+            </div>
+            <div class="dashboard-charts">
+                <canvas id="chart2"></canvas>
+            </div>
+            <div class="dashboard-charts">
+                <canvas id="chart3"></canvas>
+            </div>
+            <div class="dashboard-charts">
+                <canvas id="chart4"></canvas>
+            </div>
+            <div class="dashboard-charts">
+                <canvas id="chart5"></canvas>
+            </div>
+            <div class="dashboard-charts">
+                <canvas id="chart6"></canvas>
+            </div>
+            <div class="dashboard-charts">
+                <canvas id="chart7"></canvas>
+            </div>
+            <div class="dashboard-charts">
+                <canvas id="chart8"></canvas>
             </div>
         </section>
 
@@ -43,6 +63,9 @@
     <footer class="rodape">© 2024 cvltransportes</footer>
     <script src="../scripts/session.js"></script>
     <script src="../scripts/utils.js"></script>
-    <script src="../scripts/header.js"></script>     
+    <script src="../scripts/header.js"></script>
+    <script src="../scripts/dashboard/dashboard_body.js"></script> 
+    <script src="../scripts/dashboard/dashboard_events.js"></script> 
+    <script src="../scripts/dashboard/dashboard_fetches.js"></script> 
 </body>
 </html>
