--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div id="loading_login">
         <div class="loader_login"></div>
     </div>
-    <footer class="rodape">© 2024 cvltransportes</footer>    
+    <footer class="rodape">© 2024 cvltransportes</footer>  
+    <script src="scripts/utils.js"></script>  
     <script src="scripts/header.js"></script>
     <script src="scripts/loader.js"></script>
     <script src="scripts/login.js"></script>     
