--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -42,6 +42,12 @@
                     <label for="date_ini">Data Final</label>
                     <input class="dashboard_filter_input" type="date" name="date_fim" id="date_fim">
                 </div>
+                <div class="dashboard_date_div">
+                    <label class="dashboard_bot_select_label" for="bot_select_name">Selecione o Bot</label>
+                    <select class="dashboard_filter_select" name="bot_select_name" id="bot_select_name">
+                        <option value=""></option>
+                    </select>
+                </div>
                 <input class="dashboard_filter_input date_submit" type="submit" value="Ok">
             </form>
 
