--- a/pages/configuracao.html
+++ b/pages/configuracao.html
@@ -79,6 +79,11 @@
                     <input class="configuration_add_new_user_input" type="text" id="username" name="username" placeholder="Usuário">
                     <input class="configuration_add_new_user_input" type="password" id="password" name="password" placeholder="Senha">
                     <input class="configuration_add_new_user_input" type="text" id="unit" name="unit" placeholder="Unidade">
+                    <label class="configuration_add_new_user_input" for="user_select_status">Situação</label>
+                    <select class="configuration_add_new_user_input" name="situation" id="situation">
+                        <option value="active">Ativo</option>
+                        <option value="inactive">Inativo</option>
+                    </select>
                     <input class="configuration_add_new_user_input configuration_add_new_user_submit" type="submit" value="Cadastrar">
                 </form>
             </div>
